[gd_scene load_steps=2 format=3 uid="uid://brnt1ui7bxujg"]

[ext_resource type="Script" path="res://pipe_spawner.gd" id="1_f4bfr"]

[node name="pipe_spawner" type="Node2D"]
script = ExtResource("1_f4bfr")

[node name="pipe-timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="pipe_marker_up" type="Marker2D" parent="."]
position = Vector2(0, -85)

[node name="pipe_marker_down" type="Marker2D" parent="."]
position = Vector2(2.08165e-12, 733)

[node name="diff_timer" type="Timer" parent="."]
wait_time = 10.0

[node name="point_marker" type="Marker2D" parent="."]
position = Vector2(0, 340)

[node name="obj_marker" type="Marker2D" parent="."]
position = Vector2(0, 86)

[connection signal="timeout" from="pipe-timer" to="." method="_on_pipetimer_timeout"]
[connection signal="timeout" from="diff_timer" to="." method="_on_diff_timer_timeout"]
